load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "nodejs_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//jest-cli:index.bzl", "jest_test")

ts_project(
    name = "lib",
    srcs = ["example.ts", "aguid.d.ts"],
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig.json",
    deps = [
	"@npm//:node_modules",
        "@npm//@types",
    ],
)

ts_project(
    name = "test_lib",
    srcs = ["app.test.ts"],
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "lib",
	"@npm//:node_modules",
        "@npm//@types",
    ],
)



jest_test(
    name = "test",
    args = [
        "--no-cache",
        "--no-watchman",
        "--ci",
        "--colors",
        "--config",
        "jest.ts.config.js",
    ],
    data = [
        ":test_lib",
        "//:jest.ts.config.js",
	"@npm//:node_modules",
    ],
    tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
)
